# mcs-ctx-and-rehydration

./: .example.env  .gitignore  README.md  requirements.txt
.devcontainer/: devcontainer.json
botconnector-lib/: README.md  pyproject.toml  setup.py  tox.ini
botconnector-lib/.openapi-generator/: FILES
botconnector-lib/bot_connector/: __init__.py  (+4 more)
dataverse-lib/: README.md  pyproject.toml
dataverse-lib/src/dataverse_api_cli/: __init__.py  cli.py  config.py  constants.py
dataverse-lib/src/dataverse_api_cli/clients/: __init__.py  auth.py  dataverse.py
dataverse-lib/src/dataverse_api_cli/models/: __init__.py  entities.py
dataverse-lib/src/dataverse_api_cli/utils/: __init__.py  console.py
dataverse-lib/tests/: __init__.py  test_auth.py  test_dataverse.py
directline-lib/: README.md  pyproject.toml  setup.py  tox.ini
directline_client/: README.md  pyproject.toml
examples/: 01_start_conversation_with_context.py  02_start_conversation_with_context_using_websocket.py  04_rehydrate_under_24hr_conversation.py  05_rehydrate_after_24hr_conversation.py  check_refresh_time_of_token_with_convid.py  conversation_activity_viewer.py  dataverse_get_transcripts_from_botid.py  direct_line_secret_.py  directline_create_conversation.py  directline_create_conversation_with_context_using_websocket.py  directline_get_transcript_from_conversation_id.py  dv_get_conversation_transcripts.py  rehydrate_and_continue_conversation.py  start_conversation_with_context.py
research/: 00-Bot-Framework-Activity-Object.md  01-Research.md
scripts/: process_openapi_for_json_requests.py
(+451 files in other folders)
